<resources>
    <string name="app_name">TECH-SHOP</string>
    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="login_name_hint">Name</string>
    <string name="login_mobile_number_hint">Mobile Number</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="profile">profile</string>
    <string name="category">category</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="offers">offers</string>
    <string name="myordeer">myOrder</string>
    <string name="newproduct">newProduct</string>
    <string name="mycarts">myCarts</string>
    <string name="description">Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="placed_order_sent">Thank you for purchasing our product \n please come again</string>
    <string name="price_1000">price :1000$</string>
    <string name="descriptionWord">description</string>
    <string name="add_to_cart">add to cart</string>
    <string name="amountNumber">1</string>
    <string name="login">Login</string>
    <string name="loginButton">Login</string>
    <string name="toolbar">Detailed product</string>
    <string name="placed_order_top">Your Order Has Been Placed</string>
    <string name="registerWord">Register</string>
    <string name="sign_up">Sign up</string>
    <string name="tech_shop">tech shop</string>
    <string name="view_all_product">view all product</string>
    <string name="name">name</string>
    <string name="discount">discount:</string>
    <string name="populer_product">Populer Product</string>
    <string name="view_all">View All</string>
    <string name="recomended">Recomended</string>
    <string name="explore_product">Explore Product</string>
    <string name="search_your_item_here">Search your item here...</string>
    <string name="buy_now">buy now</string>
    <string name="total_price_is_0">total price is: 0$</string>
    <string name="you_havent_purchased_anything_yet">you havent purchased anything yet</string>
    <string name="sorry_there_is_no_new_product_yet">sorry there is no new product yet</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="update">UPDATE</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">Product Price</string>
    <string name="total_quantity">Total Quantity</string>
    <string name="total_price">Total Price</string>
    <string name="discount_20_off">Discount 20% off</string>
</resources>