<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">


   <de.hdodenhof.circleimageview.CircleImageView
       android:id="@+id/profile_img"
       android:layout_width="200dp"
       android:layout_height="200dp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       android:layout_marginTop="15dp"
       android:src="@drawable/profileimg"
       />

    <EditText
        android:id="@+id/profile_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/name"
        android:padding="13dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_img"
        app:layout_constraintWidth_percent=".8"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:drawablePadding="10dp"
        android:drawableTint="#3C9BCA"/>

    <EditText
        android:id="@+id/profile_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:background="@drawable/rounded_edittext"
        android:drawableLeft="@drawable/ic_baseline_email_24"
        android:drawablePadding="10dp"
        android:drawableTint="#3C9BCA"
        android:hint="@string/login_email_hint"
        android:padding="13dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_img"
        app:layout_constraintWidth_percent=".8" />

    <EditText
        android:id="@+id/profile_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="184dp"
        android:background="@drawable/rounded_edittext"
        android:drawableLeft="@drawable/ic_baseline_smartphone_24"
        android:drawablePadding="10dp"
        android:drawableTint="#3C9BCA"
        android:hint="@string/phone_number"
        android:padding="13dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_img"
        app:layout_constraintWidth_percent=".8" />

    <EditText
        android:id="@+id/profile_add"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="260dp"
        android:background="@drawable/rounded_edittext"
        android:drawableLeft="@drawable/ic_baseline_location_on_24"
        android:drawablePadding="10dp"
        android:drawableTint="#3C9BCA"
        android:hint="@string/address"
        android:padding="13dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_img"
        app:layout_constraintWidth_percent=".8" />

    <Button
        android:id="@+id/profile_update"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#3C9BCA"
        android:text="@string/update"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_add" />


</androidx.constraintlayout.widget.ConstraintLayout>