<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">
      <EditText
          android:id="@+id/tvSearch_box"
          android:elevation="3dp"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="8dp"
          android:padding="13dp"
          android:background="@drawable/rounded_edittext"
          android:drawablePadding="5dp"
          android:drawableLeft="@drawable/ic_baseline_search_24"
          android:hint="@string/search_your_item_here"
          />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:weightSum="2"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="sans-serif"
        android:text="@string/populer_product"
        android:textSize="18sp"
        android:textStyle="bold"        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvView_all_populer"
        android:layout_weight="1"
        android:fontFamily="sans-serif"
        android:text="@string/view_all"
        android:gravity="end"
        android:layout_marginRight="7dp"
        android:textSize="16sp"
        android:textColor="@color/purple_700"
        />


</LinearLayout>
      <androidx.recyclerview.widget.RecyclerView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="5dp"
          android:id="@+id/pop_rec"
          />
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:layout_marginLeft="10dp"
          android:layout_marginRight="10dp"
          android:weightSum="2"
          >

          <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:fontFamily="sans-serif"
              android:text="@string/explore_product"
              android:textSize="18sp"
              android:textStyle="bold"        />
          <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/tvView_all_explore"
              android:layout_weight="1"
              android:fontFamily="sans-serif"
              android:text="@string/view_all"
              android:gravity="end"
              android:layout_marginRight="7dp"
              android:textSize="16sp"
              android:textColor="@color/purple_700"
              />


      </LinearLayout>
      <androidx.recyclerview.widget.RecyclerView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="5dp"
          android:id="@+id/explore_rec"
          />
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:layout_marginLeft="10dp"
          android:layout_marginRight="10dp"
          android:weightSum="2"
          >

          <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:fontFamily="sans-serif"
              android:text="@string/recomended"
              android:textSize="18sp"
              android:textStyle="bold"        />
          <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/tvView_all_recomended"
              android:layout_weight="1"
              android:fontFamily="sans-serif"
              android:text="@string/view_all"
              android:gravity="end"
              android:layout_marginRight="7dp"
              android:textSize="16sp"
              android:textColor="@color/purple_700"
              />


      </LinearLayout>
      <androidx.recyclerview.widget.RecyclerView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="5dp"
          android:id="@+id/recom_rec"
          />
  </LinearLayout>

</ScrollView>