<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailedActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#49ABDA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Detailed product" />

    <ImageView
        android:id="@+id/detailed_img"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/detailed_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif"

        android:text="@string/price_1000"
        android:textColor="#49ABDA"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginLeft="10dp"
        app:layout_constraintStart_toStartOf="@+id/detailed_img"
        app:layout_constraintTop_toBottomOf="@+id/detailed_img" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="70dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:src="@drawable/ratingbar"
        app:layout_constraintEnd_toEndOf="@+id/detailed_img"
        app:layout_constraintTop_toBottomOf="@+id/detailed_img" />

    <TextView
        android:id="@+id/detailed_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="5.0"
        android:textSize="20sp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="2dp"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/detailed_img" />

    <TextView

        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"

        android:text="@string/descriptionWord"
        android:textStyle="bold"
        android:textColor="#094968"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/detailed_rating"
        app:layout_constraintStart_toEndOf="@+id/detailed_price"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/detailed_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:text="@string/description"
        android:textColor="@color/black"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <RelativeLayout
        android:id="@+id/relative_layout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="#49ABDA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:id="@+id/add_item"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:src="@drawable/ic_baseline_add_circle_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/relative_layout"
        android:layout_marginLeft="6dp"/>

    <TextView
        android:id="@+id/quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amountNumber"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/add_item"
        app:layout_constraintTop_toTopOf="@+id/relative_layout"
        android:layout_marginLeft="4dp"
        />

    <ImageView
        android:id="@+id/remove_item"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:src="@drawable/ic_baseline_remove_circle_24"
        android:layout_marginLeft="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/quantity"
        app:layout_constraintTop_toTopOf="@+id/relative_layout" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/add_to_cart"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/add_to_cart"
        android:layout_marginRight="10dp"
        android:background="@drawable/login_button_bk"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/relative_layout"
        app:layout_constraintTop_toTopOf="@+id/relative_layout" />






</androidx.constraintlayout.widget.ConstraintLayout>