<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="5dp"
    android:elevation="4dp"
    android:layout_marginTop="7dp"
    android:backgroundTint="#A689CDED">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
>
        <ImageView
            android:background="@drawable/img_border"
            android:id="@+id/cat_img"
            android:layout_width="150dp"
            android:layout_height="150dp"

            android:scaleType="centerInside"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:orientation="vertical">
            <TextView
                android:fontFamily="sans-serif-smallcaps"
                android:id="@+id/cat_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:ellipsize="end"
            android:maxLines="1"
            android:singleLine="true"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>
            <TextView
                android:fontFamily="sans-serif-smallcaps"
                android:id="@+id/cat_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descriptionWord"
                android:ellipsize="end"
                android:maxLines="2"
                android:singleLine="false"
                android:textStyle="bold"
                android:textColor="@color/black"/>
            <TextView
                android:fontFamily="sans-serif-smallcaps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/discount"
                android:layout_marginTop="24dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/cat_discount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-smallcaps"

                android:text="20%OFF"
                android:textColor="#1E32AC"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:src="@drawable/ic_baseline_arrow_forward_ios_24"
                android:background="#6C7EED"

                android:layout_marginRight="5dp"
                android:layout_marginTop="15dp"/>

        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>