<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="5dp"
    android:elevation="4dp"
    android:layout_marginTop="7dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        >
        <ImageView

            android:id="@+id/cat_detailed_img"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:scaleType="fitXY"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:orientation="vertical">
            <TextView

                android:fontFamily="sans-serif-smallcaps"
                android:id="@+id/cat_detailed_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:ellipsize="end"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>


            <TextView
                android:id="@+id/cat_detailed_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="product price"
                android:textColor="#1E32AC"
                android:textSize="14sp"
                android:textStyle="bold" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">
            <ImageView
                android:id="@+id/add_item"
                android:layout_width="30dp"
                android:layout_height="54dp"
                android:src="@drawable/ic_baseline_add_circle_24"

                android:layout_marginLeft="6dp"/>

            <TextView
                android:id="@+id/quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amountNumber"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginLeft="4dp"
                />

            <ImageView
                android:id="@+id/remove_item"
                android:layout_width="30dp"
                android:layout_height="54dp"
                android:src="@drawable/ic_baseline_remove_circle_24"
                android:layout_marginLeft="5dp"
               />

        </LinearLayout>
            <androidx.appcompat.widget.AppCompatButton
                android:layout_gravity="end"
                android:id="@+id/add_to_cart"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/buy_now"
                android:layout_marginRight="2dp"
                android:background="@drawable/login_button_bk"
                android:textColor="@color/black"/>
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>